--- a/recommender_baseline.ipynb
+++ b/recommender_baseline.ipynb
@@ -8,8 +8,8 @@
     "Скор ниже бейзлайна организаторов: 0.081 на валидации и 0.076 на паблике.\n",
     "\n",
     "Использованная модель неэффективна, т.к. включает только 225 самых популярных товаров и четыре фичи (возраст, пол, товаров в корзине, популярный товар).  \n",
-    "Предполагается, что в докере только CPU. Поэтому используется классификатор без подддержки GPU, он очень долго тренируется.   \n",
-    "Ноутбук просто показывает, как сохранять модель и метки товаров для предсказания в докере. "
+    "Предполагается, что в докере только CPU. Поэтому используется классификатор без поддержки GPU.   \n",
+    "Ноутбук показывает, как оценивать точность модели локально и сохранять ее и метки товаров для предсказания в докере. "
    ]
   },
   {
